fixed 'edit name' visibility bug

--- a/app/assets/stylesheets/canvas.css
+++ b/app/assets/stylesheets/canvas.css
@@ -67,10 +67,6 @@ div.bubble div.representation.editing {
   box-shadow: 1px 1px 3px #000;
 }
 div.bubble div.representation button.reword {
-  display: none;
-}
-div.bubble div.representation.editing button.reword {
-  display: inline;
 }
 /*
 unfortunately these don't play nice with nesting
